# PID-Controller-Design-A

./: .coveralls.yml  .travis.yml  CMakeLists.txt  LICENSE  cppcheck_result.txt  readme.md
app/: main.cpp  pid.cpp
include/: pid.hpp
test/: CMakeLists.txt  cpp-test  main.cpp  test.cpp
